Update credentials Mysql database

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
           <li>Desarrollo de una API en Flask</li>
           <li>Despliege de la API en Heroku Cloud</li>
         </ol>
-        <h2 class="form_title">Formato de las consultasa a la API</h2>
+        <h2 class="form_title">Formato de las consultas a la API</h2>
         <ol>
           <li>/get_word_count/netflix/love/</li>
           <li>/get_score_count/netflix/85/2010/</li>
